# werewolf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yaml  test.yaml
docs/: configuration.md  rules.md
examples/: 16_llm_responses.json  movie_crazy_fox.json  movie_lovers.json  movie_mad_land.json
examples/case_studies/: 16_llm_2026-07-20_public_transcript.txt  movie_crazy_fox_20260721_public_transcript.txt  movie_lovers_20260723_public_transcript.txt  movie_mad_land_20260724_public_transcript.txt  movie_prison_break_20260722_public_transcript.txt
python_template/: __init__.py
tests/: test_agents.py  test_boundary.py  test_cli.py  test_docs.py  test_engine.py  test_version.py
werewolf/: __init__.py  __main__.py  agents.py  boundary.py  cli.py  config.py  engine.py  models.py  skills.py
