[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=7",
]
build-backend = "setuptools.build_meta"

[project]
name = "llm-werewolf"
dynamic = ["version"]
description = "A terminal-first Werewolf game for humans and OpenAI-compatible LLM agents."
authors = [
    { name = "Jinzhe Zeng", email = "jinzhe.zeng@ustc.edu.cn"},
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
]
requires-python = ">=3.9"
readme = "README.md"
keywords = [
    "werewolf",
    "llm",
    "terminal-game",
]

[project.scripts]
werewolf = "werewolf.cli:main"

[project.urls]
repository = "https://github.com/njzjz/werewolf"

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-cov',
]

[tool.setuptools.packages.find]
include = ["werewolf*"]

[tool.setuptools_scm]
version_file = "werewolf/_version.py"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "FBT001",
    "FBT002",
    "N803",
    "FA100",
    "S603",
    "C901",
    "COM812", # Ruff formatter owns trailing-comma layout.
    "E501",
    "RUF001", # Chinese terminal copy intentionally uses full-width punctuation.
    "T201", # This application is intentionally terminal-first.
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
required-imports = [
    "from __future__ import annotations",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ANN",
    "D101",
    "D102",
]

[tool.coverage.report]
include = ["werewolf/*"]
